Added socket.io library

--- a/kurento-one2many-call/static/index.html
+++ b/kurento-one2many-call/static/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -20,7 +20,7 @@
     <script src="bower_components/ekko-lightbox/dist/ekko-lightbox.min.js"></script>
 
     <script src="bower_components/kurento-utils/js/kurento-utils.js"></script>
-
+    <script src="socket-io.js"></script>
     <script src="js/index.js"></script>
     <title>Kurento Tutorial 3: Video Call 1 to N with WebRTC</title>
   </head>
