Changes for specifying a camera / room name

--- a/kurento-one2many-call/static/index.html
+++ b/kurento-one2many-call/static/index.html
@@ -24,7 +24,7 @@
     <!-- <script src="https://localhost:9000/socket.io/socket.io.js"></script> -->
     <!-- <script src="/socket.io/socket.io.js"></script> -->
     <script src="js/index.js"></script>
-    <title>Kurento Tutorial 3: Video Call 1 to N with WebRTC</title>
+    <title>Video Call 1 to N with Kurento / Signal Server</title>
   </head>
   <body>
 
@@ -99,6 +99,7 @@
                 <span class="glyphicon glyphicon-user"></span> Viewer</a>
               <a id="terminate" href="#" class="btn btn-danger">
                 <span class="glyphicon glyphicon-stop"></span> Stop</a>
+              <input type="text" placeholder="Camera Name" id="cameraName"/>
             </div>
           </div>
           <br/>
