--- a/kurento-one2many-call/static/index.html
+++ b/kurento-one2many-call/static/index.html
@@ -94,7 +94,7 @@
           <div class="row">
             <div class="col-md-12">
               <a id="call" href="#" class="btn btn-success">
-                <span class="glyphicon glyphicon-play"></span> Presenter</a>
+                <span class="glyphicon glyphicon-play"></span> Camera Mode</a>
               <a id="viewer" href="#" class="btn btn-primary">
                 <span class="glyphicon glyphicon-user"></span> Viewer</a>
               <a id="terminate" href="#" class="btn btn-danger">
